fixed strange white space chrome

--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;1,800&display=swap");
 
+html {
+  margin: 0;
+}
+
+body {
+  margin: 0;
+}
+
 #header {
   width: 100vh;
   position: fixed;
